--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -17,6 +17,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/service.js"></script>
+    <!-- ng-file script -->
+    <!-- concatenated flow.js + ng-flow libraries -->
+    <script src="lib/ng-file/ng-flow-standalone.min.js"></script>
 </head>
 <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
