--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -9,7 +9,9 @@
     <link href="lib/ion-md-input/css/ion-md-input.min.css" rel="stylesheet">
     <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/angular-resource.min.js"></script>
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="lib/ion-md-input/js/ion-md-input.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
@@ -18,9 +20,6 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/service.js"></script>
-    <!-- ng-file script -->
-    <!-- concatenated flow.js + ng-flow libraries -->
-    <script src="lib/ng-file/ng-flow-standalone.min.js"></script>
 </head>
 <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
